# krafthack

./: 01. dnn_lstm.ipynb  01_dnn_lstm.ipynb  04. create_lstm.ipynb  LICENSE  data_exploration.ipynb  gdrive_04_create_lstm.ipynb  pyproject.toml  submission.ipynb  test.py
