[tool.poetry]
name = "krafthack"
version = "0.1.0"
description = ""
authors = ["Yoan Dinkov <yoandinkov@gmail.com>", "Fabio Zeiser <fz.phys@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.10.2"
numpy = "^1.22.2"
pandas = "^1.4.1"
tqdm = "^4.63.0"
pytorch-lightning = "^1.5.10"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
jupyter = "^1.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"